[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu/Title Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MainMenu/Main Menu Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/MainMenu/MainMenuButton.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MainMenu/Fade.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]

resource_name = "fade_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "fade_out"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="MainMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="MainPage" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.4, 0, 0, 1 )
_sections_unfolded = [ "Grow Direction", "Material", "Rect", "Theme", "Visibility" ]

[node name="MarginContainer" type="MarginContainer" parent="MainPage" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 30
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MainPage/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 30.0
margin_right = 984.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="LeftSide" type="VBoxContainer" parent="MainPage/MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 372.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="CenterContainer" type="CenterContainer" parent="MainPage/MarginContainer/HBoxContainer/LeftSide" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 372.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
use_top_left = false
_sections_unfolded = [ "Margin", "Size Flags", "Theme" ]

[node name="Title" type="Label" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 18.0
margin_right = 316.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Go-Cell"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Hint", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="MenuButtons" type="VBoxContainer" parent="MainPage/MarginContainer/HBoxContainer/LeftSide" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 155.0
margin_right = 372.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_constants" ]

[node name="SinglePlayer" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 372.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Solo Play!!"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="MultiPlayer" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 122.0
margin_right = 372.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Multi Player"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="TimeTrial" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 202.0
margin_right = 372.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Time Trial"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="Credits2" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 282.0
margin_right = 372.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Credits"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="RightSide" type="VBoxContainer" parent="MainPage/MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 412.0
margin_right = 944.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 11
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="GameOptions" type="HBoxContainer" parent="MainPage/MarginContainer/HBoxContainer/RightSide" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 532.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Settings" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 121.0
margin_right = 281.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Settings"
underline = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Help" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 321.0
margin_right = 424.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Help?"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Size Flags", "custom_colors", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="Exit" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_right = 532.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Exit"
underline = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="CenterContainer" type="CenterContainer" parent="MainPage/MarginContainer/HBoxContainer/RightSide" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 532.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Fade" type="ColorRect" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )
_sections_unfolded = [ "Rect" ]

[node name="FadeAnimation" type="AnimationPlayer" parent="Fade" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
blend_times = [  ]

[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]

[connection signal="fade_out_finished" from="Fade" to="." method="_on_Fade_fade_out_finished"]

[connection signal="animation_finished" from="Fade/FadeAnimation" to="Fade" method="_on_FadeAnimation_animation_finished"]


